--- a/index.html
+++ b/index.html
@@ -14,6 +14,7 @@
     <script src="lib/angular-ui-router/angular-ui-router.js"></script>
     <script src="lib/bootstrap-3.3.5/js/bootstrap.min.js"></script>
     <script src="lib/webuploader/webuploader.min.js"></script>
+    <script src="lib/md5.js"></script>
     <script src="js/app.js"></script>
     <script src="js/controllers/main-controller.js"></script>
     <script src="js/controllers/body-controller.js"></script>
